--- a/backend-for-whatsapp/dockerfile
+++ b/backend-for-whatsapp/dockerfile
@@ -1,16 +1,15 @@
-FROM ubuntu:16.04
-
+FROM python:3.6-slim
 LABEL maintainer="Manoj Jahgirdar <manoj.jahgirdar@in.ibm.com>"
+WORKDIR /app
 
-RUN apt-get update
-RUN apt-get install -y python3 python3-dev python3-pip
+ADD . /app
 
-COPY ./ ./app
-WORKDIR ./app
+# RUN apt-get update && apt-get install -y libpq-dev gcc
+# # need gcc to compile psycopg2
+# RUN pip3 install psycopg2~=2.6
+# RUN apt-get autoremove -y gcc
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
-RUN python3 -m pip install pip --upgrade
-RUN python3 -m pip install wheel
+EXPOSE 8080
 
-RUN pip3 install -r requirements.txt
-
-CMD python3 app.py
+CMD ["python", "-u", "app.py"]
